@@ -109,4 +109,28 @@ use Dist::Zilla::Plugin::OnlyCorePrereqs;   # make sure we are loaded!
     ) or diag explain $tzil->log_messages;
 }
 
+{
+    my $tzil = Builder->from_config(
+        { dist_root => 't/does_not_exist' },
+        {
+            add_files => {
+                'source/dist.ini' => simple_ini(
+                    [ Prereqs => RuntimeRequires => { 'HTTP::Tiny' => '0.025' } ],
+                    [ OnlyCorePrereqs => { starting_version => '5.008', check_dual_life_versions => 0 } ],
+                ),
+            },
+        },
+    );
+
+    # normally we'd see this:
+    # [OnlyCorePrereqs] detected a runtime requires dependency that was not
+    # added to core until 5.013009: HTTP::Tiny
+    is(
+        exception { $tzil->build },
+        undef,
+        'build succeeded, despite HTTP::Tiny not being in core in perl 5.013009'
+    )
+    or diag 'got log messages: ', explain $tzil->log_messages;
+}
+
 done_testing;
